--- a/styles/site.styl
+++ b/styles/site.styl
@@ -21,6 +21,11 @@ if $monospace
    font-size: 0.9em;
  body > footer, nav li time, .freecomment-time
   font-size: 0.9em;
+ form section
+  select
+   top: 0;
+  input[type="text"], input[type="password"], select, textarea
+   font-size: 10pt;
 
 body
  background: $background
